--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 logo: https://bioboot.github.io/bimm143_F24/assets/img/logo.png
 title: Introduction to Bioinformatics
