--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-chameleon
+theme: jekyll-theme-poole
 logo: https://bioboot.github.io/bimm143_F24/assets/img/logo.png
 title: Introduction to Bioinformatics
